test/rabbitmq/stage1/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: rabbitmq-te
  name: rabbitmq-management-ui
spec:
  rules:
    - host: rabbitmq.fcaus-te.autodata.tech
      http:
        paths:
          - backend:
              service:
                name: rabbitmq-te
                port:
                  name: management
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - rabbitmq.fcaus-te.autodata.tech
      secretName: fcaus-wildcard
